Bug 972566, when a window is resized, panels should be repositioned after the view reflow rather than within the webshell listener, r=tn