view/src/nsView.cpp
@@ -994,6 +994,15 @@ nsView::WindowResized(nsIWidget* aWidget, int32_t aWidth, int32_t aHeight)
     int32_t p2a = devContext->AppUnitsPerDevPixel();
     mViewManager->SetWindowDimensions(NSIntPixelsToAppUnits(aWidth, p2a),
                                       NSIntPixelsToAppUnits(aHeight, p2a));
+
+    nsXULPopupManager* pm = nsXULPopupManager::GetInstance();
+    if (pm) {
+      nsIPresShell* presShell = mViewManager->GetPresShell();
+      if (presShell && presShell->GetDocument()) {
+        pm->AdjustPopupsOnWindowChange(presShell);
+      }
+    }
+
     return true;
   }
   else if (IsPopupWidget(aWidget)) {
